
2009-04-25 (dazjorz)
 * Made send.php use validTypes() everywhere, so no hardcoded types.
 * Optimized stats.php hugely (the same way as sendReminders).
 * Made the table layout show correctly (comment table expanded, the rest
 nonexpanded) even if comments are very short; and moved <td><span
 class="nobr"> to be simply <td class="nobr">.

2009-04-24 (dazjorz)
 * Made getting of status counts in sendReminders much quicker and easier
 thanks to Jille Timmermans and Bart Schuurmans.
 * Templatized the top of all LikeBack pages from header.php.
 * Made 'view.php' pass the W3C validator test: gave all images valid alts,
 changed nobr to a span with CSS styles, removed text-shadow, wrap all form
 elements in a div, close all inputs correctly.
 * Some interface changes: default font of the LikeBack interface, made table
 headings go in the center by default, removed background and border of the
 infobox and added awful temporary color.

2009-04-23 (dazjorz)
 * Added getLikeBackUrl() function to functions.inc.php to return the HTTP path
 to this LikeBack instance.
 * Added sendReminders script and template, which should be run by crontab
 every week, to e-mail all developers of their remaining comments.
 * Fixed warning in functions.php which appeared when an unknown developer
 visited the site.
 * Commented out Context tab in the commenttable.tpl since it's not needed
 right now.
 * Made version instead of fullVersion shown in commenttable, and fullVersion
 when you hover it with the mouse.
 * Moved and fixed sendMailTo() to functions.inc.php so send.php can use it too.
 * Added application logo, preferences box and awful LikeBack logo to the top
 bar.
 * Made the table use the full width of the screen, even if that space isn't
 needed.
 * Fixed some bugs in comment.php which were caused by earlier changes.
 * E-mails about an added comment are now sent From $useraddress, Sender
 $likebackMail, replyTo $likebackMail.